// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[generation] createType utils createImportRouteType should match snapshot 1`] = `
NodeObject {
  "decorators": undefined,
  "end": -1,
  "flags": 8,
  "importClause": NodeObject {
    "end": -1,
    "flags": 8,
    "isTypeOnly": false,
    "kind": 262,
    "modifierFlagsCache": 0,
    "name": undefined,
    "namedBindings": NodeObject {
      "elements": Array [
        NodeObject {
          "end": -1,
          "flags": 8,
          "kind": 265,
          "modifierFlagsCache": 0,
          "name": IdentifierObject {
            "end": -1,
            "escapedText": "TypedRoute",
            "flags": 8,
            "kind": 78,
            "modifierFlagsCache": 0,
            "originalKeywordKind": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 0,
          },
          "parent": undefined,
          "pos": -1,
          "propertyName": undefined,
          "transformFlags": 0,
        },
      ],
      "end": -1,
      "flags": 8,
      "kind": 264,
      "modifierFlagsCache": 0,
      "parent": undefined,
      "pos": -1,
      "transformFlags": 0,
    },
    "parent": undefined,
    "pos": -1,
    "transformFlags": 0,
  },
  "kind": 261,
  "localSymbol": undefined,
  "locals": undefined,
  "modifierFlagsCache": 0,
  "modifiers": undefined,
  "moduleSpecifier": TokenObject {
    "end": -1,
    "flags": 8,
    "hasExtendedUnicodeEscape": undefined,
    "kind": 10,
    "modifierFlagsCache": 0,
    "parent": undefined,
    "pos": -1,
    "singleQuote": true,
    "text": "@routerkit/core",
    "transformFlags": 0,
  },
  "nextContainer": undefined,
  "parent": undefined,
  "pos": -1,
  "symbol": undefined,
  "transformFlags": 0,
}
`;

exports[`[generation] createType utils createStringLiteral should match snapshot 1`] = `
TokenObject {
  "end": -1,
  "flags": 8,
  "hasExtendedUnicodeEscape": undefined,
  "kind": 10,
  "modifierFlagsCache": 0,
  "parent": undefined,
  "pos": -1,
  "singleQuote": true,
  "text": "someString",
  "transformFlags": 0,
}
`;

exports[`[generation] createType utils createValidRouteIdentifier should match createIdentifier 1`] = `
IdentifierObject {
  "end": -1,
  "escapedText": "info",
  "flags": 8,
  "kind": 78,
  "modifierFlagsCache": 0,
  "originalKeywordKind": undefined,
  "parent": undefined,
  "pos": -1,
  "transformFlags": 0,
}
`;

exports[`[generation] createType utils createValidRouteIdentifier should match createStringLiteral when literal has "-" char 1`] = `
TokenObject {
  "end": -1,
  "flags": 8,
  "hasExtendedUnicodeEscape": undefined,
  "kind": 10,
  "modifierFlagsCache": 0,
  "parent": undefined,
  "pos": -1,
  "singleQuote": true,
  "text": "user-center",
  "transformFlags": 0,
}
`;
